Fix compilation